Bug 452129 - Expanding updates to show details of some items causes different items elsewhere in the list to also become expanded after scrolling
Summary: Expanding updates to show details of some items causes different items elsewh...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-31 23:10 UTC by Oliver Beard
Modified: 2022-06-21 19:21 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.2
Sentry Crash Report:


Attachments
A video showing the bug. (2.40 MB, video/webm)
2022-03-31 23:16 UTC, Oliver Beard
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Beard 2022-03-31 23:10:12 UTC
SUMMARY
The updates view in Discover is buggy when displaying a large number of updates (>40 or so). When expanding some updates, updates further down partially expand to show where the update is from (though such an expansion is not possible by user input). When scrolling back up after manually expanded updates have been out of view, they are sometimes no longer expanded.

Clicking updates to expand or hide their details shows both release notes, state, vendor and repository at the bottom, however, updates partially expanded by this bug only show the repository.

This appears to occur on both X11 and the Wayland session. I am using Arch Linux (packagekit-qt5).

STEPS TO REPRODUCE
1. Have a large number of updates available (>40 or so).
2. Open the updates view.
3. Expand several updates at the top, scroll down and scroll up.

OBSERVED RESULT
Certain updates's details are partially expanded with no discernible pattern, and expanded updates unexpand themselves.

EXPECTED RESULT
Updates only expand/unexpand when clicked to reveal/hide details.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: /
(available in About System)
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3

ADDITIONAL INFORMATION
Comment 1 Oliver Beard 2022-03-31 23:16:44 UTC
Created attachment 147871 [details]
A video showing the bug.
Comment 2 Nate Graham 2022-04-01 20:06:48 UTC
omg, amazing
Comment 3 Bug Janitor Service 2022-06-17 18:18:36 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/discover/-/merge_requests/321
Comment 4 Nate Graham 2022-06-21 19:20:56 UTC
Git commit e968db24ab26fd54cd6ca5f4174a3b87ebed05a4 by Nate Graham, on behalf of Aleix Pol.
Committed on 21/06/2022 at 19:20.
Pushed by ngraham into branch 'master'.

updates: Move the extended delegate state into the model

This way when a delegate is reused, it will be properly initialised as
the user expected.

M  +5    -5    discover/qml/UpdatesPage.qml
M  +9    -0    libdiscover/UpdateModel/UpdateItem.h
M  +9    -0    libdiscover/UpdateModel/UpdateModel.cpp
M  +1    -0    libdiscover/UpdateModel/UpdateModel.h

https://invent.kde.org/plasma/discover/commit/e968db24ab26fd54cd6ca5f4174a3b87ebed05a4
Comment 5 Nate Graham 2022-06-21 19:21:21 UTC
Git commit 063f06d4fe1571fa911bec288db9829a33610d52 by Nate Graham, on behalf of Aleix Pol.
Committed on 21/06/2022 at 19:21.
Pushed by ngraham into branch 'Plasma/5.25'.

updates: Move the extended delegate state into the model

This way when a delegate is reused, it will be properly initialised as
the user expected.


(cherry picked from commit e968db24ab26fd54cd6ca5f4174a3b87ebed05a4)

M  +5    -5    discover/qml/UpdatesPage.qml
M  +9    -0    libdiscover/UpdateModel/UpdateItem.h
M  +9    -0    libdiscover/UpdateModel/UpdateModel.cpp
M  +1    -0    libdiscover/UpdateModel/UpdateModel.h

https://invent.kde.org/plasma/discover/commit/063f06d4fe1571fa911bec288db9829a33610d52