updates: Move the extended delegate state into the model

This way when a delegate is reused, it will be properly initialised as
the user expected.

BUG: 452129


(cherry picked from commit e968db24ab26fd54cd6ca5f4174a3b87ebed05a4)